--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,140 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node.js dependencies
+/node_modules/
+/.pnp/
+/.pnp.js
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Next.js build outputs
+/.next/
+/out/
+/.turbo/
+/dist/
+/build/
 
-# testing
+# Tailwind y PostCSS
+postcss.config.js
+tailwind.config.js
+
+# Lockfiles
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Environment variables
+.env
+.env.*.local
+.env.local
+
+# IDE y editores de código
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Archivos temporales del sistema operativo
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# Archivos de configuración de TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Cache de Babel, SWC y Vite
+.cache/
+.babelcache/
+.swc/
+.vite/
+
+# Archivos de configuración personal
+.vscode/
+*.env.*
+
+# Archivos de imagen y fuentes
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.ico
+*.webp
+*.woff
+*.woff2
+*.ttf
+*.otf
+*.eot
+
+# Caché de npm y pnpm
+.npm/
+.pnpm/
+.cache/
+*.log
+
+# Configuración de Git
+.gitattributes
+.gitignore
+.git/
+
+# Configuración de Vercel y Netlify
+.vercel/
+.netlify/
+*.toml
+
+# ESLint y Prettier
+.eslintrc.js
+.eslintignore
+.prettierrc
+.prettierignore
+
+# Jest
+/jest.config.js
+/jest/
+/.jest/
+
+# Cypress
+/cypress/
+cypress.json
+cypress.env.json
+
+# Historial de versiones
+.history/
+.revisions/
+
+# Storybook
+/.storybook/
+storybook-static/
+
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Producción
 /build
 
-# misc
+# Misceláneos
 .DS_Store
 *.pem
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Otros archivos generados
+*.bak
+*.tmp
+*.log
+*.lock
+
+# Evitar duplicados de global.css
+src/app/globals.css
+
+# Control de archivos temporales de Turbopack
+.turbo/
