--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -1,4 +1,5 @@
-name:Continuous-integration and Deployment
+name: Continuous Integration and Deployment
+
 on: 
   push:
     branches:
@@ -14,28 +15,37 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Install Node.js 22.x
         uses: actions/setup-node@v3
         with:
           node-version: 22.x
-      - name: Checkout code
+
+      - name: Install dependencies
         run: npm install
+
       - name: Build
-        run: npm build
+        run: npm run build
+
   Deploy:
     needs: Build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
+
       - name: Install Node.js 22.x
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 22.x
+
       - name: Install Vercel CLI
-        run: npm global add vercel
-      - name: Pull Vercel Enviroment Variables
+        run: npm install -g vercel
+
+      - name: Pull Vercel Environment Variables
         run: vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy to Vercel
         run: vercel deploy --no-wait --token=${{ secrets.VERCEL_TOKEN }}
-        
