--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,8 @@
 sonar.projectKey=camilo-avendano1_ViveMedellin_V1
 sonar.organization=camilo-avendano1
 
+sonar.projectName=ViveMedellin_V1
+sonar.projectVersion=1.0
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=ViveMedellin_V1
-#sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sources=src
+sonar.sourceEncoding=UTF-8
